--- a/org.macjariel.dsl.debugger/plugin.xml
+++ b/org.macjariel.dsl.debugger/plugin.xml
@@ -5,9 +5,37 @@
    <extension
          point="org.eclipse.debug.core.launchConfigurationTypes">
       <launchConfigurationType
-            id="org.macjariel.dsl.debugger.launchConfigurationType1"
-            name="name">
+            delegate="org.macjariel.dsl.debugger.launcher.DSLLaunchDelegate"
+            id="org.macjariel.dsl.debugger.launchConfigurationType"
+            modes="debug"
+            name="DSL Debugger"
+            public="true">
       </launchConfigurationType>
    </extension>
-
+<extension
+         point="org.eclipse.debug.core.breakpoints">
+      <breakpoint
+            class="org.macjariel.dsl.debugger.breakpoints.DSLLineBreakpoint"
+            id="org.macjariel.dsl.debugger.DSLLineBreakpoint"
+            markerType="org.macjariel.dsl.debugger.dslLineMarker"
+            name="DSL Line Breakpoint">
+      </breakpoint>
+   </extension>
+   <extension
+         id="org.macjariel.dsl.debugger.dslLineMarker"
+         name="DSLLineMarker"
+         point="org.eclipse.core.resources.markers">
+      <super
+            type="org.eclipse.debug.core.lineBreakpointMarker">
+      </super>
+      <persistent
+            value="true">
+      </persistent>
+      <attribute
+            name="org.eclipse.debug.core.enabled">
+      </attribute>
+      <attribute
+            name="org.eclipse.debug.core.id">
+      </attribute>
+   </extension>
 </plugin>
