* Another organization changes in DSL Debugger project,   mostly inspired by JDI debug model organization. * Added conditionalBlock type of semantic element type to   handle conditional block commands as if/else, for, while, etc. * Added strategy pattern to allow more stepping strategies. * Improved step-into and step-out strategies, breakpoints   are now put into all branches of a conditionalBlock and   after it. * Karel DSL annotated with new conditionalBlock type. * Fixed some bugs that annoyed me. * Minor changes in many little things.

--- a/org.macjariel.dsl.debugger/plugin.xml
+++ b/org.macjariel.dsl.debugger/plugin.xml
@@ -16,14 +16,14 @@
          point="org.eclipse.debug.core.breakpoints">
       <breakpoint
             class="org.macjariel.dsl.internal.debug.core.breakpoints.DSLLineBreakpoint"
-            id="org.macjariel.dsl.debugger.DSLLineBreakpoint"
-            markerType="org.macjariel.dsl.debugger.lineBreakpointMarker"
+            id="org.macjariel.dsl.debug.core.DSLLineBreakpoint"
+            markerType="org.macjariel.dsl.debug.core.dslLineBreakpointMarker"
             name="DSL Line Breakpoint">
       </breakpoint>
    </extension>
    <extension
-         id="org.macjariel.dsl.debugger.lineBreakpointMarker"
-         name="LineBreakpointMarker"
+         id="org.macjariel.dsl.debug.core.dslLineBreakpointMarker"
+         name="DSL Line Breakpoints"
          point="org.eclipse.core.resources.markers">
       <super
             type="org.eclipse.debug.core.lineBreakpointMarker">
